    * New function console.assert in JS
    * Hook messages between modules and dump them using rrr_stats 
    * Hook events and show them using rrr_stats
    * Set mode on file which are written by the file module
    * Incrementer can use prefixes ORed with incremented ID
    * Dump memory profiling using functionallity provided by jemalloc
 
  * Improvements:
    * Timeout changes in httpclient and rotate deferred to msgdb PUT
      messages to ensure all are attempted and not the same messages time out
      repeatedly.
    * In JS, refuse bare name module imports (require prefix like ./) and
      process relative paths correctly with respect to directory of importing
      script.
    * In httpclient, print stats about dropped messages in periodic function
      instead of once for every message.
    * Add warning when buffer entry count exceeds a certain configurable limit
    * Add statistics data for message broker costumer buffers
    * Print warning and disallow requests in HTTP-client if the endpoints has
      invalid characters.

  * Fixes:
    * Raw data messages in JS module now working properly
    * Crash in JS module upon GC due to null pointer access
    * Httpclient sometimes spinning on CPU indefinitely after handshaking if
      there is no data to send on a socket.
    * Readers were blocked in message broker when writer used do_again during
      slot write (fast writes from dummy module with buffer=no).
    * Deadlock in rrr_stats due to printing messages during signal handling
    * Soft error was ignored in socket client collection also when socket
      surely was closed, like when 0 bytes were read. This caused the socket
      not to be closed with following CPU spin due do constant POLLIN event.
      The soft error is now forced to propagate if bytes read is zero so that
      only data errors are ignored (which is also intention of higher levels).
    * Connections were closed in IP module when byte by byte sync was used